--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
      container_name: speedtest
      image: henrywhitaker3/speedtest-tracker
      volumes:
-       - ./data:/config
+       - /mnt/iron/test:/config
      environment:
        - TZ="Europe/Berlin"
        - PGID=${PGID:-1000}
